# django-svelte-jwt-app

./: README.md  pyproject.toml
backend/core/: views.py
backend/mysite/: settings.py
core/: serializer.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx
frontend/src/components/: LoginForm.jsx  Nav.jsx
mysite/: settings.py  urls.py
