[tool.poetry]
name = "django-svelte-jwt-app"
version = "0.1.0"
description = "Decoupled SPA using Django + Svelte + JWT tokens"
authors = ["drmeph <kevin.dorfer@gmail.com>"]
readme = "README.md"
packages = [{include = "django_svelte_jwt_app"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.6"
djangorestframework = "^3.14.0"
django-cors-headers = "^3.13.0"
djangorestframework-simplejwt = "^5.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
